# Babbage-Browser

./: .gitignore  API_REFERENCES.md  Architecture.md  BRC-100  BRC100_IMPLEMENTATION_PLAN.md  BRC100_WALLET_INTEGRATION_PLAN.md  BUILD_INSTRUCTIONS.md  CEF_REACT_INTEGRATION_GUIDE.md  CRITICAL_OVERLAY_POSITION_BUG_FIX.md  DEVELOPER_NOTES.md  FEATURES.md  FRONTEND_INTEGRATION_SUMMARY.md  IMPLEMENTATION_GUIDE_NAVIGATION_BUTTONS.md  MIGRATION_REFERENCE.md  NAVIGATION_BUTTONS_IMPLEMENTATION_COMPLETE.md  OVERLAY_WINDOW_TRACKING_FIX.md  PROJECT_OVERVIEW.md  QUICK_ANSWERS_TABS_AND_NAVIGATION.md  README.md  SESSION_SUMMARY_2025-10-07.md  SESSION_SUMMARY_FINAL_2025-10-09.md  SESSION_SUMMARY_OVERLAY_TRACKING.md  SESSION_SUMMARY_REACT_CEF_FIXES.md  Systematic_Migration_Plan.md  WALLET_ARCHITECTURE.md
cef-native/: CMakeLists.txt  cef_browser_shell.cpp
cef-native/include/: simple_handler.h
cef-native/src/: simple_handler.cpp  simple_render_process_handler.cpp
cef-native/src/core/: AddressHandler.cpp  BRC100Bridge.cpp  CMakeLists.txt  HttpRequestInterceptor.cpp  IdentityHandler.cpp  PanelHandler.cpp  WalletManager.cpp  WalletService.cpp
cef-native/tests/: CMakeLists.txt  test_wallet.cpp
frontend/: package-lock.json  vite.config.ts
frontend/public/: overlay.html  test-overlay.html
frontend/src/: App.tsx  main.tsx  (+1 more)
go-wallet/: brc100_api.go  go.mod  go.sum  hd_wallet.go  main.go  test.ps1  transaction_broadcaster.go  transaction_builder.go  utxo_manager.go
python-wallet/: bitcoin_wallet.py  requirements.txt  wallet_daemon.py
test-website/: http-interceptor-test.html
(+44 files in other folders)
